--- a/src/MinimalistVideo/Pages/Home.razor
+++ b/src/MinimalistVideo/Pages/Home.razor
@@ -1,17 +1,18 @@
 ﻿@page "/"
+@implements IDisposable
 @using MinimalistVideo.Components
 @using OneOf
 @using OneOf.Types
-
-@if (ValidVimeo)
-{
-    <div style="padding:56.25% 0 0 0;position:relative;">
-        <iframe src="@($"https://player.vimeo.com/video/{Vimeo}{(string.IsNullOrWhiteSpace(VimeoHash) ? string.Empty : $"?h={VimeoHash}")}")" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" data-ready="true" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
-    </div>
-}
+@inject PersistentComponentState ApplicationState
 
 <MudContainer Fixed="true" MaxWidth="MaxWidth.Medium">
     <Loader Loaded="@_pageLoaded">
+        @if (ValidVimeo)
+        {
+            <div style="padding:56.25% 0 0 0;position:relative;">
+                <iframe src="@($"https://player.vimeo.com/video/{Vimeo}{(string.IsNullOrWhiteSpace(VimeoHash) ? string.Empty : $"?h={VimeoHash}")}")" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" data-ready="true" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+            </div>
+        }
         <MudStack Style="width:100%; height:100%; position:relative;">
             <MudStack Row="true">
                 <MudSpacer />
@@ -58,6 +59,8 @@
 
 @code {
     private bool _pageLoaded = false;
+    private PersistingComponentStateSubscription _persistingSubscription;
+    private OneOf<PrerenderedState, None> _prerenderedState = new None();
 
     [SupplyParameterFromQuery(Name = "y")]
     public string? YouTube { get; set; }
@@ -92,14 +95,46 @@
 
     protected override void OnAfterRender(bool firstRender)
     {
-        if(!firstRender)
+        // remove placeholder UI 
+        if(!_pageLoaded)
         {
-            this.InvokeAsync(() =>
-                  {
-                      _pageLoaded = true;
+            if ((_prerenderedState.IsT1 && firstRender) || (_prerenderedState.IsT0))
+            {
+                this.InvokeAsync(() =>
+                      {
+                          _pageLoaded = true;
 
-                      this.StateHasChanged();
-                  });
+                          this.StateHasChanged();
+                      });
+            }
         }     
     }
+
+    protected override void OnInitialized()
+    {
+        _persistingSubscription = ApplicationState.RegisterOnPersisting(PersistComponentStateAsync);
+
+        if (!ApplicationState.TryTakeFromJson<PrerenderedState>("fetchdata", out var restored))
+        {
+            _prerenderedState = new None();
+        }
+        else
+        {
+            _prerenderedState = restored!;
+        }
+    }
+
+    private Task PersistComponentStateAsync()
+    {
+        ApplicationState.PersistAsJson("fetchdata", new PrerenderedState());
+
+        return Task.CompletedTask;
+    }
+
+    void IDisposable.Dispose()
+    {
+        _persistingSubscription.Dispose();
+    }
+
+    private class PrerenderedState;
 }
